@startuml Grippers_Architecture
title Grippers — Ports & Adapters (main 브랜치 구현 기준)

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle
skinparam defaultFontColor #1F2937

skinparam note {
  BackgroundColor #FFF8DC
  BorderColor #D6C070
  FontColor #000000
}

' ============================================================
package "domain :: values" #E8F4FD {
  class Pose2D <<dataclass>> {
    + x : float
    + y : float
    + theta : float
  }
  class Point3 <<dataclass>> {
    + x : float
    + y : float
    + z : float
  }
}

' ============================================================
package "domain :: task" #FFF4E5 {
  class Ports <<dataclass>> {
    + base : BaseDriver
    + arm : ArmDriver
    + perception : Perception
    + estop : Event
  }

  class MissionTask {
    - ports : Ports
    + run() : Generator<State>
  }

  abstract class State {
    + name : str
    + {abstract} execute(ports) : State
  }

  class IdleState
  class TransitOutState {
    + MAX_RETRIES = 5
    - target : Pose2D
    - retries : int
  }
  class LightAdaptState
  class DockingState
  class IdentifyState {
    - retries : int
  }
  class GraspState {
    - target_pose
  }
  class PosePlanState {
    - _solve_phi(h_gap) : float
  }
  class NarrowExitState {
    - phi : float
    - _phi_to_xyz(phi) : list
  }
  class ReturnState
  class ReleaseState

  class TransitOutFailedState
  class IdentifyFailedState
  class GraspFailedState
  class NarrowExitFailedState
  class EstopState

  State <|-- IdleState
  State <|-- TransitOutState
  State <|-- LightAdaptState
  State <|-- DockingState
  State <|-- IdentifyState
  State <|-- GraspState
  State <|-- PosePlanState
  State <|-- NarrowExitState
  State <|-- ReturnState
  State <|-- ReleaseState
  State <|-- TransitOutFailedState
  State <|-- IdentifyFailedState
  State <|-- GraspFailedState
  State <|-- NarrowExitFailedState
  State <|-- EstopState

  MissionTask *-- Ports
  MissionTask ..> State : yield
}

TransitOutState ..> Pose2D

' ============================================================
package "domain :: ports (ABC)" #EDE7F6 {
  interface BaseDriver {
    + drive_to(target) : bool
    + align_to_centerline() : float
    + stop() : None
  }
  interface ArmDriver {
    + move_to_cartesian(xyz, grip, down) : bool
    + set_gripper(deg) : None
    + get_load() : float
  }
  interface Perception {
    + detect_target() : (found, pose, dims)
    + measure_gap() : object
    + set_light_profile(profile) : bool
    + monitor_clearance() : object
  }
}

Ports --> BaseDriver
Ports --> ArmDriver
Ports --> Perception
Perception ..> Point3

' ============================================================
package "domain :: adapters.real" #E8F5E9 {
  class Ros2MecanumBase {
    - _node
    - _drive_client : ActionClient
    - _align_client
    - _stop_client
  }
  class Ros2ArmDriver {
    - _node
    - _move_client : ActionClient
    - _gripper_client
    - _load_client
  }
  class Ros2Perception {
    - _node
    - _detect_client
    - _gap_client
    - _light_client
    - _clearance_client
  }
}

package "domain :: adapters.fake" #FCE4EC {
  class FakeBase {
    - _arrive : bool
  }
  class FakeArm {
    - _move_ok : bool
  }
  class FakePerception {
    - _found : bool
    - _contact_risk : bool
    - _h_gap : float
  }
}

BaseDriver <|.. Ros2MecanumBase
BaseDriver <|.. FakeBase
ArmDriver <|.. Ros2ArmDriver
ArmDriver <|.. FakeArm
Perception <|.. Ros2Perception
Perception <|.. FakePerception

' ============================================================
package "ros2_ws :: nodes" #ECEFF1 {
  class MissionOrchestratorNode {
    - _state_pub
    - _estop_flag : Event
    - _fsm_thread : Thread
    + _run_fsm()
  }
  class BaseDriverNode {
    - _cmd_vel_pub
    - _drive_action_server
  }
  class ArmDriverNode {
    - _move_action_server
  }
  class PerceptionNode {
    - _latest_frame
    - _bridge : CvBridge
  }
}

MissionOrchestratorNode ..> MissionTask
MissionOrchestratorNode ..> Ros2MecanumBase
MissionOrchestratorNode ..> Ros2ArmDriver
MissionOrchestratorNode ..> Ros2Perception

Ros2MecanumBase ..> BaseDriverNode : action / service
Ros2ArmDriver ..> ArmDriverNode : action / service
Ros2Perception ..> PerceptionNode : service

note bottom of FakeBase
  하드웨어 없이 CI에서
  전체 미션 파이프라인 실행
end note

note right of PosePlanState
  _solve_phi() 는 현재 0.0 고정 (스텁)
  자세 재조정 수식 미구현 (#47)
end note

note bottom of PerceptionNode
  비전 파이프라인 미구현.
  monitor_clearance 는 안전 원칙에 따라
  항상 contact_risk=True 반환
end note

note right of BaseDriverNode
  /cmd_vel 발행 주체는
  이 노드 하나뿐
end note

@enduml
